# ai-slack-google-connect

./: .gitignore  CLAUDE.md  README.md  SETUP_LOG.md  USAGE.md  pyproject.toml  requirements.txt
docs/: SETUP_LOG.md  USAGE.md  architecture.md  cost-estimate.md
infra/aws/: api_gateway.tf  backend.tf  dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  secrets.tf  variables.tf
infra/backend/: main.tf  outputs.tf  variables.tf
infra/gcp/: main.tf  outputs.tf  variables.tf
scripts/: deploy.sh  setup_backend.sh
src/: app.py
src/handlers/: interactive_handler.py  message_handler.py  oauth_handler.py
src/services/: bedrock_service.py  calendar_service.py  conversation_service.py  token_service.py
src/tools/: calendar_tools.py  tool_executor.py
src/utils/: secrets_utils.py  slack_utils.py  time_utils.py
tests/unit/: test_app.py  test_bedrock_service.py  test_calendar_service.py  test_calendar_tools.py  test_conversation_service.py  test_interactive_handler.py  test_message_handler.py  test_message_handler_integration.py  test_oauth_handler.py  test_secrets_utils.py  test_slack_utils.py  test_time_utils.py  test_token_service.py  test_tool_executor.py
